get the z-index issue fixed

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -24,16 +24,27 @@
     overflow: hidden;
     text-align: center;
     background: #000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    /*z-index: -1;*/
+}
+
+.ResumeHomeBlock-square {
+    z-index: -1;
 }
 
 .ResumeHomeBlock-squares > div {
     opacity: 0.35;
+    /*z-index: -1;*/
 }
 
 .ResumeHomeBlock-squares > div > div > div {
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: -1;
 }
 
 .ResumeHomeBlock-squares .SVGInline {
@@ -45,14 +56,38 @@
     fill: #fff !important;
 }
 
+.ResumeHomeBlock-heading {
+    z-index: 99
+}
+
 .ResumeHomeBlock-headline-container {
+    position: relative;
     color: #fff;
     text-align: center;
     padding: 30px 25px 30px;
+    /*max-width: 960px;*/
+    /*border: 1px solid #fff;*/
+    /*z-index: 999;*/
+    /*background: rgba(0, 0, 0, 0.3);*/
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    align-self: center;
+}
+
+.ResumeHomeBlock-headline {
+    position: relative;
+    color: #fff;
+    text-align: center;
+    padding: 30px 30px 30px;
     max-width: 960px;
     border: 1px solid #fff;
-    z-index: 1;
+    z-index: 999;
     background: rgba(0, 0, 0, 0.3);
+    /*display: flex;*/
+    /*align-items: center;*/
+    /*justify-content: center;*/
+    /*align-self: center;*/
 }
 
 .ResumeHomeBlock-sns-container {
